--- a/build.xml
+++ b/build.xml
@@ -55,34 +55,36 @@
         </sequential>
     </macrodef>
 	<!-- Now create the AIR package using the ADT utility -->
-	<target name="airApkWin" description="Create the AIR package" depends="airMobile,checkos" if="isWindows">
-		<exec executable="${FLEX_HOME}/bin/adt.bat" failonerror="true">
-			<arg line="-package" />
-			<arg line="-target apk-captive-runtime" />
-			<arg line="-storetype pkcs12" />
-			<arg line="-keystore ${basedir}/coc.keystore" />
-			<arg line="-storepass 123456" />
-			<arg line="${build.dir}/CoC-Mobile.apk" />
-			<arg line="${basedir}/CoC-Android.xml" />
-            <arg line="-C ${build.dir} CoC-Mobile.swf" />
-            <arg line="-C ${basedir}"/>
-            <arg line="devTools/icons"/>
-		</exec>
-	</target>
-    <target name="airApkLin" description="Create the AIR package" depends="airMobile,checkos" if="isLinux">
-        <exec executable="${FLEX_HOME}/bin/adt" failonerror="true">
-            <arg line="-package" />
-            <arg line="-target apk-captive-runtime" />
-            <arg line="-storetype pkcs12" />
-            <arg line="-keystore ${basedir}/coc.keystore" />
-            <arg line="-storepass 123456" />
-            <arg line="${build.dir}/CoC-Mobile.apk" />
-            <arg line="${basedir}/CoC-Android.xml" />
-            <arg line="-C ${build.dir} CoC-Mobile.swf" />
-            <arg line="-C ${basedir}"/>
-            <arg line="devTools/icons"/>
-        </exec>
+    <macrodef name="createAirApk">
+        <attribute name="platform" />
+        <attribute name="specialArch"/>
+        <sequential>
+            <exec executable="${FLEX_HOME}/bin/adt@{platform}" failonerror="true">
+                <arg line="-package" />
+                <arg line="-target apk-captive-runtime" />
+                <arg line="-arch @{specialArch}"/>
+                <arg line="-storetype pkcs12" />
+                <arg line="-keystore ${basedir}/coc.keystore" />
+                <arg line="-storepass 123456" />
+                <arg line="${build.dir}/CoC-Mobile-@{specialArch}.apk" />
+                <arg line="${basedir}/CoC-Android.xml" />
+                <arg line="-C ${build.dir} CoC-Mobile.swf" />
+                <arg line="-C ${basedir}" />
+                <arg line="devTools/icons" />
+            </exec>
+        </sequential>
+    </macrodef>
+
+    <target name="airApkWin" description="Create the AIR package" depends="airMobile,checkos" if="isWindows">
+        <createAirApk platform=".bat" specialArch="armv7"/>
+        <createAirApk platform=".bat" specialArch="armv8"/>
     </target>
+
+    <target name="airApkLin" description="Create the AIR package" depends="airMobile,checkos" if="isLinux">
+        <createAirApk platform="" specialArch="armv7"/>
+        <createAirApk platform="" specialArch="armv8"/>
+    </target>
+
 
     <target name="release" depends="init" description="Build with release flags">
         <build-game-binary debug-flag="false" release-flag="true" air-flag="false" binary-name="CoC-release.swf"></build-game-binary>
