--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -43,8 +43,9 @@ jobs:
         uses: joshtynjala/setup-apache-flex-action@v2
         with:
           flex-version: "4.16.1"
-          air-version: "50.0.1.1"
+          air-version: "50.2.3.8"
           accept-air-license: true
+
       # install VNC and xfce4 so we have a desktop, as the flash player requires one:
       - name: Install desktop
         run: sudo apt-get install tightvncserver xfce4 ant ant-optional -y
@@ -59,7 +60,7 @@ jobs:
 
       # this is where the build happens. A separate build is started for every entry in the matrix element
       - name: Build
-        run: ant allCI
+        run: ant all
 
       - name: save debug swf
         uses: actions/upload-artifact@v3
@@ -73,14 +74,14 @@ jobs:
           name: release-swf
           path: target/CoC-release.swf
 
-      - name: save android armv7 apk
-        uses: actions/upload-artifact@v3
-        with:
-          name: mobile-apk
-          path: target/CoC-Mobile-armv7.apk
-
-      - name: save android armv8 apk
-        uses: actions/upload-artifact@v3
-        with:
-          name: mobile-apk
-          path: target/CoC-Mobile-arm8.apk
+#      - name: save android armv7 apk
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: mobile-apk
+#          path: target/CoC-Mobile-armv7.apk
+#
+#      - name: save android armv8 apk
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: mobile-apk
+#          path: target/CoC-Mobile-arm8.apk
