--- a/build.xml
+++ b/build.xml
@@ -51,6 +51,7 @@
                 <define name="CONFIG::debug" value="@{debug-flag}"/>
                 <define name="CONFIG::AIR" value="@{air-flag}"/>
                 <define name="CONFIG::STANDALONE" value="true"/>
+                <swf-version>41</swf-version>
             </mxmlc>
         </sequential>
     </macrodef>
