--- a/build.xml
+++ b/build.xml
@@ -36,6 +36,7 @@
         <attribute name="debug-flag"/>
         <attribute name="release-flag"/>
 		<attribute name="air-flag"/>
+        <attribute name="standalone-flag"/>
         <attribute name="binary-name"/>
         <sequential>
             <!-- build the game binary -->
@@ -50,7 +51,7 @@
                 <define name="CONFIG::release" value="@{release-flag}"/>
                 <define name="CONFIG::debug" value="@{debug-flag}"/>
                 <define name="CONFIG::AIR" value="@{air-flag}"/>
-                <define name="CONFIG::STANDALONE" value="true"/>
+                <define name="CONFIG::STANDALONE" value="@{standalone-flag}"/>
                 <swf-version>41</swf-version>
             </mxmlc>
         </sequential>
@@ -88,14 +89,14 @@
 
 
     <target name="release" depends="init" description="Build with release flags">
-        <build-game-binary debug-flag="false" release-flag="true" air-flag="false" binary-name="CoC-release.swf"></build-game-binary>
+        <build-game-binary debug-flag="false" release-flag="true" air-flag="false" standalone-flag="true" binary-name="CoC-release.swf"></build-game-binary>
     </target>
 
     <target name="debug" depends="init" description="Build with debug flags">
-        <build-game-binary debug-flag="true" release-flag="false" air-flag="false" binary-name="CoC-debug.swf"></build-game-binary>
+        <build-game-binary debug-flag="true" release-flag="false" air-flag="false" standalone-flag="true" binary-name="CoC-debug.swf"></build-game-binary>
     </target>
 	<target name="airMobile" depends="init" description="Build air release">
-		<build-game-binary debug-flag="false" release-flag="false" air-flag="false" binary-name="CoC-Mobile.swf"></build-game-binary>
+		<build-game-binary debug-flag="true" release-flag="true" air-flag="true" standalone-flag="false" binary-name="CoC-Mobile.swf"></build-game-binary>
 	</target>
 
     <target name="all" depends="init,release,debug,airMobile" description="Build all swf versions"/>
