--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -36,8 +36,8 @@ jobs:
         with:
           submodules: true
 
-      - name: Download and install Android SDK
-        uses: android-actions/setup-android@v3
+      #- name: Download and install Android SDK
+      #  uses: android-actions/setup-android@v3
 
       - name: install flex sdk
         uses: joshtynjala/setup-apache-flex-action@v2
@@ -45,18 +45,6 @@ jobs:
           flex-version: "4.16.1"
           air-version: "33.1.1.345"
           accept-air-license: true
-
-      # install VNC and xfce4 so we have a desktop, as the flash player requires one:
-      #- name: Install desktop
-      #  run: sudo apt-get install tightvncserver xfce4 ant ant-optional -y
-
-      # So flexunit can find the player and the ant build file does not have to be modified
-      #- name: Copy flashplayer to correct location
-      #  run: sudo cp build-dep/bin/flashplayer /usr/local/bin/gflashplayer
-
-      # start a VNC session, this will be the desktop for tests
-      - name: Start VNC
-        run: Xvnc :1 &
 
       # this is where the build happens. A separate build is started for every entry in the matrix element
       - name: Build
