--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: 'adopt'
+          java-version: '11'
 
       - name: Checkout repository
         uses: actions/checkout@v3
