--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -73,3 +73,17 @@ jobs:
         with:
           name: mobile-arm8-64bit-apk
           path: target/CoC-Mobile-armv8.apk
+  notify:
+    name: Discord Notification
+    runs-on: ubuntu-latest
+    needs: # make sure the notification is sent AFTER the jobs you want included have completed
+      - build
+      - test
+    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+
+    steps:
+      - name: Notify
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.GIT_TOKEN }}
+          discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
