see if discord webhook notification works....

--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -73,16 +73,9 @@ jobs:
         with:
           name: mobile-arm8-64bit-apk
           path: target/CoC-Mobile-armv8.apk
-  notify:
-    name: Discord Notification
-    runs-on: ubuntu-latest
-    needs: # make sure the notification is sent AFTER the jobs you want included have completed
-      - build
-    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
 
-    steps:
-      - name: Notify
-        uses: nobrayner/discord-webhook@v1
+      - name: Discord notification to channel
+        uses: sarisia/actions-status-discord@v1
+        if: always()
         with:
-          github-token: ${{ secrets.GIT_TOKEN }}
-          discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
