--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -77,5 +77,6 @@ jobs:
       - name: Discord notification to channel
         uses: sarisia/actions-status-discord@v1
         if: always()
+        allow_failure: true
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
