allow failure if no token, again

--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -79,4 +79,4 @@ jobs:
         if: always()
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
-        allow-failure: true
+        continue-on-error: true
