--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   # tell the build file where to find the flex SDK
-  FLEX_HOME: "build-dep/bin/flex/"
+  FLEX_HOME: "C:/ApacheFlexSDK"
   # this is to trick the flash player into thinking it is running on a desktop
   DISPLAY: ":1"
 
@@ -43,12 +43,7 @@ jobs:
           path: |
             C:/ApacheFlexSDK
         id: "cacheme"
-        #handle cache found
-      - if: ${{ steps.cacheme.outputs.cache-hit == 'true' }}
-        name: fix env
-        shell: pwsh
-        run : |
-          echo "FLEX_HOME=C:/ApacheFlexSDK" >> $env:GITHUB_ENV
+
       #handle cache failed
       - if: ${{ steps.cacheme.outputs.cache-hit != 'true' }}
         name: install flex sdk
