--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -3,16 +3,14 @@
 
 name: ActionScript 3 CI
 
-# Github workflows do not support actionscript directly.
-# However the build uses ant, which is usually used to build java projects.
+# GitHub workflows do not support actionscript directly.
+# However, the build uses ant, which is usually used to build java projects.
 # The ant task (mxmlc) provided by the flex SDK (ant/lib/flexTasks.jar) is used to build the project.
 
 on:
-  push:
-    # Just so the CI won't complain about Vanilla+ failing, since V+ isn't configured for CI.
-    branches-ignore: [ master ]
-  pull_request:
-    branches: [ master-wip ]
+  workflow_dispatch:
+  schedule:
+    - cron: "0 22 * * *"
 
 env:
   # tell the build file where to find the flex SDK
