--- a/build.xml
+++ b/build.xml
@@ -82,14 +82,22 @@
         </sequential>
     </macrodef>
 
-    <target name="airApkWin" description="Create the AIR package" depends="airMobileOrigin,checkos" if="isWindows">
-        <createAirApk platform=".bat" specialArch="armv7" swf-name="CoC-Mobile" SpecialPostfix="armv7"/>
-        <createAirApk platform=".bat" specialArch="armv8" swf-name="CoC-Mobile" SpecialPostfix="armv8"/>
+    <target name="airApkWinRelease" description="Create the AIR package" depends="CoCMobileRelease,checkos" if="isWindows">
+        <createAirApk platform=".bat" specialArch="armv7" swf-name="CoC-Mobile-Release" SpecialPostfix="Release-32bit"/>
+        <createAirApk platform=".bat" specialArch="armv8" swf-name="CoC-Mobile-Release" SpecialPostfix="Release-64bit"/>
+    </target>
+    <target name="airApkWinDebug" description="Create the AIR package" depends="CoCMobileBeta,checkos" if="isWindows">
+        <createAirApk platform=".bat" specialArch="armv7" swf-name="CoC-Mobile-Beta" SpecialPostfix="Beta-32bit"/>
+        <createAirApk platform=".bat" specialArch="armv8" swf-name="CoC-Mobile-Beta" SpecialPostfix="Beta-64bit"/>
     </target>
 
-    <target name="airApkLin" description="Create the AIR package" depends="airMobileOrigin,checkos" if="isLinux">
-        <createAirApk platform="" specialArch="armv7" swf-name="CoC-Mobile" SpecialPostfix="armv7"/>
-        <createAirApk platform="" specialArch="armv8" swf-name="CoC-Mobile" SpecialPostfix="armv8"/>
+    <target name="airApkLinRelease" description="Create the AIR package" depends="CoCMobileRelease,checkos" if="isLinux">
+        <createAirApk platform="" specialArch="armv7" swf-name="CoC-Mobile-Release" SpecialPostfix="Release-32bit"/>
+        <createAirApk platform="" specialArch="armv8" swf-name="CoC-Mobile-Release" SpecialPostfix="Release-64bit"/>
+    </target>
+    <target name="airApkLinDebug" description="Create the AIR package" depends="CoCMobileBeta,checkos" if="isLinux">
+        <createAirApk platform="" specialArch="armv7" swf-name="CoC-Mobile-Beta" SpecialPostfix="Beta-32bit"/>
+        <createAirApk platform="" specialArch="armv8" swf-name="CoC-Mobile-Beta" SpecialPostfix="Beta-64bit"/>
     </target>
 
     <echo>building standalone swfs</echo>
@@ -101,16 +109,13 @@
         <build-game-binary debug-flag="true" release-flag="false" air-flag="false" standalone-flag="true" should-optimize="false" binary-name="CoC-debug.swf"/>
     </target>
     <echo> building mobile/air swfs</echo>
-	<target name="airMobileOrigin" depends="init" description="Build air">
-		<build-game-binary debug-flag="true" release-flag="true" air-flag="true" standalone-flag="false" should-optimize="true" binary-name="CoC-Mobile.swf"/>
-	</target>
     <target name="CoCMobileBeta" depends="init" description="Build air">
         <build-game-binary air-flag="true" standalone-flag="false" debug-flag="true" release-flag="false" should-optimize="true" binary-name="CoC-Mobile-Beta.swf"/>
     </target>
     <target name="CoCMobileRelease" depends="init" description="Build air">
         <build-game-binary air-flag="true" standalone-flag="false" debug-flag="false" release-flag="true" should-optimize="true" binary-name="CoC-Mobile-Release.swf"/>
     </target>
-    <target name="all" depends="init,release,debug,CoCMobileBeta,CoCMobileRelease,airMobileOrigin" description="Build all swf versions"/>
-    <target name="makeMobileAir" depends="init,airMobileOrigin,airApkLin,airApkWin" description=" build mobile App"/>
+    <target name="all" depends="init,release,debug,CoCMobileBeta,CoCMobileRelease" description="Build all swf versions"/>
+    <target name="makeMobileAir" depends="init,airApkLinDebug,airApkLinRelease,airApkWinRelease,airApkWinDebug" description=" build mobile App"/>
     <target name="allCI" depends="init,release,debug,makeMobileAir" description="Build all swf versions"/>
 </project>
